--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -54,7 +54,7 @@ Start Content
           <div class="col-md-6 pColMain">
             <div class="pCol">
               <a href="{% url 'main:blog' slug=obj.slug %}" >
-                {% comment %} <img src="{{obj.image.url}}" alt="..." class="pImg"> {% endcomment %} 
+               <img src="{{obj.image.url}}" alt="..." class="pImg"> 
               </a>
             </div>
           </div>
