--- a/main/templates/main/components/footer.html
+++ b/main/templates/main/components/footer.html
@@ -11,6 +11,7 @@ Start Footer
         <li><a href="https://github.com/apervmm"  target="_blank"><img src="{% static 'images/github1.png' %}" alt="..."></a></li>
         </ul>
         <div class="copyrightCol">
+            <p><b>Copyright &copy; AP 2025</b></p>
         </div>
     </div>
     </div>
