--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -50,19 +50,34 @@ Start Content
 
             <div class="bannerBtnCol">
               <div class="row">
+                
                 <div class="col-auto">
                   {% comment %} <a download href="{{me.userprofile.cv.url}}" class="btn btnPrimary">Download Resume</a> {% endcomment %}
                   <a download href="{{me.userprofile.get_cv_url}}" class="btn btnPrimary">Download Resume</a>
                 </div>
+
                 <div class="col-auto">
                   <a href="{% url 'main:contact' %}" class="btn btnOutline">Contact</a>
                 </div>
                 
-                <div class="col-auto">
+                <!-- <div class="col-auto">
                   <ul class="socialM">
                   <li><a href="https://www.linkedin.com/in/almas-perneshev/"  target="_blank"><img src="{% static 'images/linkedin.svg' %}" alt="..."></a></li>
                   <li><a href="https://github.com/apervmm"  target="_blank"><img src="{% static 'images/github1.png' %}" alt="..."></a></li>
                   </ul>
+                </div> -->
+
+                <div class="col-auto">
+                  <div class="socialM">
+                    <a href="https://www.linkedin.com/in/almas-perneshev/" target="_blank"><img src="{% static 'images/linkedin.svg' %}" alt="..."></a>
+                  </div>
+                </div>
+
+
+                <div class="col-auto">
+                  <div class="socialM">
+                    <a href="https://github.com/apervmm"  target="_blank"><img src="{% static 'images/github1.png' %}" alt="..."></a>
+                  </div>
                 </div>
 
               </div>
