--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}{%endblock %}</title>
-    <meta name="author" content="Did Coding Limited & James Granger Design">
-    <link rel="canonical" href="{{request.path}}"/>
-    <link rel="home" href="{% url 'main:home' %}"/>
+    <title>{% block title %} Almas Perneshev {% endblock %}</title>
+    <meta name="Almas Perneshev" content="Portfolio of Almas Perneshev">
+    <!-- <link rel="canonical" href="{{request.path}}"/>
+    <link rel="home" href="{% url 'main:home' %}"/> -->
     <meta name="description" content="{% block description %}{% endblock %}">
     <meta name="keywords" content="{% block keywords %}{% endblock %}">
 
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/images.png' %}">
-    <link rel="apple-touch-icon" type="image/jpg" href="{% static 'images/images.png' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/user.jpg' %}">
+    <link rel="apple-touch-icon" type="image/jpg" href="{% static 'images//user.jpg' %}">
     <!-- ================================
     Start CSS
     ================================= -->
