--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,8 +4,8 @@
 <!-- ================================
 Start SEO blocks
 ================================= -->
-{% block title %}{% endblock %}
-{% block decription %}{% endblock %}
+{% block title %} Almas Perneshev {% endblock %}
+{% block decription %} Almas Perneshev's full-stack portfolio application that extends resume {% endblock %}
 {% block keywords %}{% endblock %}
 <!-- ================================
 END SEO blocks
