--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -53,7 +53,7 @@ Start Content
                 
                 <div class="col-auto">
                   {% comment %} <a download href="{{me.userprofile.cv.url}}" class="btn btnPrimary">Download Resume</a> {% endcomment %}
-                  <a download href="{{me.userprofile.get_cv_url}}" class="btn btnPrimary">Download Resume</a>
+                  <a download href="{{me.userprofile.get_cv_url}}" class="btn btnPrimary">Resume</a>
                 </div>
 
                 <div class="col-auto">
