--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -5,8 +5,8 @@
 Start SEO blocks
 ================================= -->
 {% block title %}{% endblock %}
-{% block decription %}{% endblock %}
-{% block keywords %}{% endblock %}
+{% block decription %} This website is used to represent Almas Perneshev's personal portfolio {% endblock %}
+{% block keywords %}Almas, Perneshev, Almas Perneshev, Perneshev Almas, Portfolio, Resume, Software Engineer, SWE, Resume, Profile {% endblock %}
 <!-- ================================
 END SEO blocks
 ================================= -->
