--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,8 +5,8 @@
 Start SEO blocks
 ================================= -->
 {% block title %} Almas Perneshev {% endblock %}
-{% block decription %} Almas Perneshev's full-stack portfolio application that extends resume {% endblock %}
-{% block keywords %}{% endblock %}
+{% block description %} This website is used to represent Almas Perneshev's personal portfolio  {% endblock %}
+{% block keywords %} Almas, Perneshev, Almas Perneshev, Perneshev Almas, Portfolio, Resume, Software Engineer, SWE, Resume, Profile {% endblock %}
 <!-- ================================
 END SEO blocks
 ================================= -->
